--- a/.github/workflows/master_leoleebackend.yml
+++ b/.github/workflows/master_leoleebackend.yml
@@ -54,4 +54,4 @@ jobs:
           app-name: 'leoleeBackend'
           slot-name: 'Production'
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_065E4E40589446388B5527386387157E }}
-          package: .
+          package: ./to-do-list
