--- a/.github/workflows/master_leoleebackend.yml
+++ b/.github/workflows/master_leoleebackend.yml
@@ -55,3 +55,5 @@ jobs:
           slot-name: 'Production'
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_065E4E40589446388B5527386387157E }}
           package: ./to-do-list
+        run: |
+          npm start
