Bug Fix: github action .yml add npm start

--- a/.github/workflows/master_leoleebackend.yml
+++ b/.github/workflows/master_leoleebackend.yml
@@ -55,5 +55,7 @@ jobs:
           slot-name: 'Production'
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_065E4E40589446388B5527386387157E }}
           package: .
-          run: |
-            npm run start
+      - name: npm start
+          npm run start
+        working-directory: .\to-do-list
+
