--- a/.github/workflows/master_leoleebackend.yml
+++ b/.github/workflows/master_leoleebackend.yml
@@ -56,6 +56,7 @@ jobs:
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_065E4E40589446388B5527386387157E }}
           package: .
       - name: npm start
+        run:
           npm run start
         working-directory: .\to-do-list
 
