Bug Fix: Modify gh action .yml to npm start

--- a/.github/workflows/master_leoleebackend.yml
+++ b/.github/workflows/master_leoleebackend.yml
@@ -57,6 +57,6 @@ jobs:
           package: .
       - name: npm start
         run:
-          npm run start
+          npm start
         working-directory: .\to-do-list
 
