--- a/.github/workflows/master_inventorydemobackend.yml
+++ b/.github/workflows/master_inventorydemobackend.yml
@@ -26,7 +26,7 @@ jobs:
           npm install
           npm run build --if-present
           npm run test --if-present
-        working-directory: .\to-do-list
+        working-directory: ./to-do-list
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v2
