Bug Fix: add azureappstart script

--- a/.github/workflows/master_inventorydemobackend.yml
+++ b/.github/workflows/master_inventorydemobackend.yml
@@ -58,5 +58,5 @@ jobs:
 
       - name: npm start
         run:
-          npm start
+          npm run azureappstart
         working-directory: ./to-do-list
