--- a/to-do-list/package.json
+++ b/to-do-list/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
+    "azureappstart": "node bin/www",
     "devstart": "nodemon ./bin/www",
     "serverstart": "SET DEBUG=to-do-list:* & npm run devstart"
   },
